Full page doc editor fixes
It was noticed that with larger documents we needed the horizontal
scrollbar to appear, since some users don't have right-left
scrolling mice/trackpads and relying exclusively on the keyboard
wasn't sufficient. This adds the horizontal scrollbar only when
needed, and at the very bottom of the screen, regardless of the
height of the editor, to make it look ok.

--- a/assets/less/codeeditor.less
+++ b/assets/less/codeeditor.less
@@ -102,9 +102,6 @@
   .ace_gutter-cell {
     min-width: 49px;
   }
-  .ace_scrollbar-h {
-    overflow: hidden !important;
-  }
 
   .ace_marker-layer .ace_bracket {
     margin: 0px;
@@ -125,7 +122,24 @@
     }
   }
 
-  #dashboard-content .scrollable {
+  #dashboard-content .code-region {
+    overflow-y: hidden;
+    position: absolute;
     top: 125px;
+    height: auto;
+    width: 100%;
+    padding: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
+}
+
+.ace_scrollbar-h {
+  right: 0px !important;
+  height: 15px !important;
+}
+
+#editor-container {
+  height: 100% !important;
 }
